fix dropdown close btn on mobile view

--- a/bigbluebutton-html5/imports/ui/components/video-provider/many-users-notify/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/video-provider/many-users-notify/styles.scss
@@ -17,3 +17,7 @@
 .button {
   @extend .button;
 }
+
+.info {
+  margin: 0;
+}
